Deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: site  
spec:
  replicas: 1
  selector:
    matchLabels: 
      web: ocean  
  template: 
    metadata:
      labels: 
        web: ocean 
    spec: 
      containers: 
        - name: ocean-site 
          image: wilses10/ocean:latest
          resources:
            limits:
              cpu: 50m
              memory: 250Mi
            requests:
              cpu: 25m
              memory: 120Mi
          ports: 
            - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata: 
  name: site    
spec: 
  selector: 
    web: ocean  
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP 
  type: LoadBalancer
