ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocean-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 54.208.223.86.nip.io  # Remplace par l'IP publique de ton EC2 + .nip.io
      http:
        paths:
          - path: /site(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: site
                port:
                  number: 81
